--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 *{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   // background-color: rgb(0, 0, 0);
   font-family: "Noto Sans", sans-serif;
   // color: white;
@@ -13,4 +14,12 @@
 
 *::-webkit-scrollbar{
   display: none;
+}
+
+@media (max-width:600px){
+  *{
+    position: relative;
+    background-color: transparent;
+    box-sizing: border-box;
+  }
 }
