--- a/src/Components/Banner.scss
+++ b/src/Components/Banner.scss
@@ -2,14 +2,15 @@
     >video{
         min-height: 100%;
         min-width: 100%;
-        // margin-left: 120px;
         position: fixed;
-        // top: 0;
         z-index: 1;
         margin-top: -65px;
     }
 }
 
+#imageRender{
+    display: none;
+}
 
 #bannerDetails{
     color: rgba(255, 255, 255, 0.749);
@@ -25,12 +26,10 @@
     }
 }
 
-
 #bannerDetails *{
     background-color: transparent;
     padding: 5px 0 5px 0px;
 }
-
 
 #extralDetails{
     display: flex;
@@ -39,6 +38,18 @@
     font-size: 13px;
     max-width: 320px;
     color: white;
+}
+
+#first{
+    list-style: none;
+}
+
+#rating{
+    > span {
+        padding: 1px 10px 1px 10px;
+        border-radius: 5px;
+        background-color:rgba(193, 193, 193, 0.333);
+    }
 }
 
 #bannerDescription{
@@ -53,56 +64,127 @@
     color: white;
 }
 
-#bannerPlayButton{
-    display: flex;
-    justify-content: center;
-    margin: 40px 0 0 0;
-    padding-top: 12px;
-    height: 50px;
-    width: 350px;
-    border-radius: 10px;
-    cursor: pointer;
-    background-color: rgba(193, 193, 193, 0.333);
-    border-color: transparent;
-    font-weight: bold;
-    font-size: 15px;
-    color: white;
-
-    > svg {
-        margin-right: 10px;
-    }
-}
-
-#rating{
-    > span {
-        padding: 1px 10px 1px 10px;
-        border-radius: 5px;
-        background-color:rgba(193, 193, 193, 0.333);
-    }
-}
-
-#first{
-    list-style: none;
-}
-
 #buttons{
     display: flex;
-}
+    margin: 40px 0px;
+    align-items: center;
 
-#addTo{
-    margin: 40px 0 0 18px;
-    font-size: 24px;
-    background-color: rgba(193, 193, 193, 0.333);
-    padding: 13px;
-    border-radius: 10px;
-    font-weight: lighter;
-    cursor: pointer;
+    > #bannerPlayButton{
+        background-color: rgba(193, 193, 193, 0.333);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 10px;
+        width: 80%;
+        cursor: pointer;
+        color: white;
+        border-color: transparent;
+        padding: 10px 0;
+        > svg{   
+            height: 25px;
+            width: 25px;
+            padding: 0 10px 0 0;
+        }
+        > span{
+            font-weight: bold;
+        }
+    }
+
+    >#addTo{
+        margin: 0 0 0 20px;
+        padding: 12px;
+        height: 50px;
+        width: 50px;
+        font-weight: lighter;
+        background-color: rgba(193, 193, 193, 0.333);
+        border-radius: 10px;
+        font-weight: lighter;
+        cursor: pointer;
+    }
 }
 
 #bannerPlayButton:hover{
-    transform: scale(1.1);
+    transform: scale(1.05);
 }
 
 #addTo:hover{
-    transform: scale(1.1);
+    transform: scale(1.05);
+}
+
+
+@media (max-width:600px){
+    #banner{
+        > video {
+            display: none;
+        }
+
+        > img{
+            display: block;
+            max-width: 100vw;
+            min-height: 50%;
+        }
+
+        > #bannerDetails{
+            display: none;
+        }
+
+        > #bannerDetailsMobile{
+            border: 2px solid red;
+            position: absolute;
+            width: 100vw;
+            top: 200px;
+            text-align: center;
+
+            > #bannerTitleMobile{
+                border: 2px solid green;
+                color: white;
+            }
+
+            > #buttonsMobile{
+                border: 2px solid blue;
+                margin: 2px 60px;
+
+                > #bannerPlayButtonMobile{
+                    width: 200px;
+                }
+
+                > svg {
+                    color: white;
+                }
+            }
+
+            #bannerGenreMobile{
+                display: flex;
+                justify-content:space-evenly;
+                margin: 0 60px;
+                border: 2px solid yellow;
+                font-size: 10px;
+                padding: 5px 0;
+            
+                > #firstMobile {
+                    list-style: none;
+                }
+            }
+        }
+
+        
+    }
+
+#bannerGenre{
+    display: flex;
+    justify-content:space-evenly;
+    margin: 0 60px;
+    border: 2px solid yellow;
+    font-size: 10px;
+    padding: 5px 0;
+
+    > #first {
+        list-style: none;
+    }
+}
+
+// #button{
+//     margin: 0 30px;
+// }
+
 }
