--- a/src/Components/Cards.scss
+++ b/src/Components/Cards.scss
@@ -1,7 +1,7 @@
 #cardStack{
     position: relative;
     z-index: 2;
-    top: 35rem;
+    top: 30rem;
     margin-left: 0px;
     padding-left: 110px;
     background-color: rgb(37, 40, 51);
@@ -70,3 +70,9 @@
     background-color: rgba(0, 0, 0, 0);
 }
 
+@media (max-width:600px){
+    #cardStack{
+        display: none;
+    }
+
+}
