--- a/src/Components/Header.scss
+++ b/src/Components/Header.scss
@@ -1,43 +1,90 @@
-.header{
-    width: 108px;
+.headerMobile{
+    display: none;
+}
+
+.headerPc{
     position: fixed;
+    width: 108px;
     height: 100%;
     top: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 3;
+    background: linear-gradient( to left, transparent 80px, rgba(5, 5, 5, 0.516) 108px);
+    z-index: 3; 
 
     > img {
-        background-color: rgba(0, 0, 0, 0);
-        width: 55%;
-        margin-top: 30px;
-        margin-left: 20px;
+        background-color: transparent;
+        width: 70px;
+        height: 60px;
+        margin-top: 20px;
+        margin-left: 15px;
     }
 }
 
-
 .icons {
-    color: rgba(193, 193, 193, 0.607);
-    background-color: rgba(0, 0, 0, 0);
-    font-size: 1.2rem;
-    margin-top: 22px;
-    margin-left: 40px;
-    height: 67%;
     display: flex;
     flex-direction: column;
+    justify-content:flex-start;
+    align-items: center;
     justify-content: space-between;
+    height: 400px;
+    background-color: transparent;
+    margin-top: 25px;
 }
 
 .icons > svg {
+    height: 20px;
+    width: 20px;
     cursor: pointer;
+    color: rgba(193, 193, 193, 0.607);
+    background-color: transparent;
 }
     
-.glarge:hover {
+.icons > svg:hover {
     transform: scale(1.2);
     color: white;
 }
     
-.glarge {
-    background-color: transparent;
-}
 
+@media (max-width:600px){
+    .headerPc{
+        display: none;
+    }
+
+    .headerMobile{
+        display: flex;
+        position: fixed;
+        bottom: 0;
+        width: 100vw;
+        height: 60px;
+        // border: 2px solid red;
+        background-color: rgb(7, 16, 28);
+
+    }
+
+    .iconsMobile{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .iconAndName{
+        // border: 2px solid red;
+        display: flex;
+        width: 100px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        > svg{
+            height: 20px;
+            width: 20px;
+            margin-bottom: 5px;
+            color: white;
+        }
+        > h4 {
+            font-size: 10px;
+            font-weight: light;
+            color: white;
+        }
+    }
+}
