--- a/src/Components/Cards.scss
+++ b/src/Components/Cards.scss
@@ -72,7 +72,39 @@
 
 @media (max-width:600px){
     #cardStack{
-        display: none;
+        position: relative;
+        top: -30px;
+        padding-left: 0px;
+        background-color: black;
+        min-height: fit-content;
     }
 
+    .imgCard{
+        min-width: 100%;
+        overflow-x: auto;
+        white-space: nowrap;
+        display: flex;
+        padding: 20px 0 20px 0px;
+        background-color: rgba(0, 0, 0, 0);
+    
+        > img {
+            height: 200px;
+            width: 150px;
+            padding: 5px;
+            border-radius: 15px;
+            cursor: pointer;
+            background-color: rgba(0, 0, 0, 0);
+            transition: transform 1s; 
+        }
+    }
+
+    .cardsHeading{
+        color: White;
+        margin: 20px 0px 0px 20px;
+        font-size: 15px;
+        position: relative;
+        background-color: rgba(0, 0, 0, 0);
+        z-index: -10;
+    }
+    
 }
